=head1 September 28, 1996

Fixed a completion buglet again: "select * from table where <TAB>"
resulted in table completion instead of field completion.

=head1 September 8, 1996

Fixed another completion buglet in pmsql (complete-table-or-field
chose to query an inexistant statement handle in some cases).

Msql::Statement now 'use strict' clean, except for the autoloader.

Added my recent posting about 'insert' closures to the FAQ.

Reformatted both Changes and FAQ (Hi, Doug!).

As I'm one of the privileged people getting prereleases of Msql2, I
have already added support for Msql2 into this release. Things are
still subject to change, so I cannot make any promises. I left all the
new features undocumented in case Bambi changes his mind about his
intentions.

Included the patch for the lost table bug.


=head1 August 28, 1996

Made Msql and Msql::Statement easier subclassable. Thanks to
jake@vivid.com (Jake Donham) for the idea.


=head1 July 29, 1996

Made t/msql.t more strict in the sense that it may now be run in
parallel.

Added a test that checks for the "lost table" phenomenon.

Assorted minor improvements to the test suite.


=head1 July 9, 1996

A few cleanups in the XS logic to reduce the code below 700 lines
again.

Added Msql->errmsg and Msql->quote (see man page)

Fixed display of control characters in pmsql.

Moved the ->as_string method into Msql/Statement.pm to make it
accessible from anywhere.

Improved test script to output query in more places in case of an
error.

=head1 July 1, 1996

pmsql: hostname were truncated at the first dot mostly.

pmsql: completion for drop table statement issued unnecessary warning.

Msql.xs eliminated warning from the cc compiler on solaris 5

Documented how to connect to a different than the default port in the
manpage.

Added gethostinfo, getserverinfo, and getprotoinfo as methods on the
database handle.

Added the admin API calls shutdown, creatdb, dropdb, reloadacls.
